RESOLVED FIXED284977
[UnifiedPDF] [iOS] Unable to type in plugin password field after 287724@main
https://bugs.webkit.org/show_bug.cgi?id=284977
Summary [UnifiedPDF] [iOS] Unable to type in plugin password field after 287724@main
Abrar Rahman Protyasha
Reported 2024-12-19 14:38:15 PST
Attachments
Abrar Rahman Protyasha
Comment 1 2024-12-19 14:46:39 PST
EWS
Comment 2 2024-12-19 22:50:02 PST
Committed 288149@main (4e58e62d6fcf): <https://commits.webkit.org/288149@main> Reviewed commits have been landed. Closing PR #38226 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.