[UnifiedPDF] [iOS] Unable to type in plugin password field after 287724@main https://bugs.webkit.org/show_bug.cgi?id=284977 rdar://141619610

Reviewed by Wenson Hsieh.

In 287724@main, we undid an assumption in various WebPage methods that
delegated to the plugin for gathering selection information or handling
synthetic clicks, where we moved from calling into a _focused_ plugin in
the frame to doing so for any plugin -- dropping the focus requirement.
This meant that an unfocused plugin element, instead of the focused
password field above it, would be used to populate editor state (among
other things) and would result in inputs made on the password field not
being reflected in the editor state, or cursor updates being correct
when hovering over the password field.

This patch revives said assumption of only consulting the frame's plugin
view if it is focused. For WebPage::completeSyntheticClick() and
WebPage::positionInformation(), we instead decide to consult the plugin
view depending on whether or not the node in question is a plugin
element.

* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::editorState const):
* Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::completeSyntheticClick):
(WebKit::WebPage::updateSelectionWithTouches):
(WebKit::WebPage::setSelectionRange):
(WebKit::WebPage::updateSelectionWithExtentPointAndBoundary):
(WebKit::WebPage::positionInformation):

Canonical link: https://commits.webkit.org/288149@main